# RTXMG

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  notice.txt  rtxmg_static_analysis.props  rtxmg_static_analysis.ruleset  shadertoolsconfig.json
CMake/: FetchDXC.cmake  FetchImplot.cmake  FetchNVAPI.cmake
demo/: CMakeLists.txt  args.cpp  args.h  blit_params.h  gbuffer.h  gui.cpp  gui.h  gui_fonts.cpp  korgi.cpp  korgi.h  lerp_keyframes_params.h  lighting_cb.h  maya_logger.cpp  maya_logger.h  monguri_demo.cpp  monguri_demo.h  monguri_demo_app.cpp  monguri_demo_app.h  monguri_gui.cpp  monguri_gui.h  monguri_gui_fonts.cpp  monguri_renderer.cpp  monguri_renderer.h  monguri_shaders.cfg  motion_vectors_params.h  pixel_debug.h  ray_payload.h  render_params.h  render_targets.cpp  render_targets.h  rtxmg_demo.cpp  rtxmg_demo.h  rtxmg_demo_app.cpp  rtxmg_demo_app.h  rtxmg_renderer.cpp  rtxmg_renderer.h  shaders.cfg  trackball.cpp  trackball.h  zrender_params.h  (+2 more)
demo/audio/: CMakeLists.txt  audio.cpp  audio.h  waveFile.cpp  waveFile.h  xaudiofaudio.h
demo/envmap/: CMakeLists.txt  preprocess_envmap.h  preprocess_envmap_params.h  scan_system.cpp  scan_system.h  scan_system_shared.h  shaders.cfg
demo/envmap/shaders/: compute_conditional.hlsl  compute_marginal.hlsl  envmap.hlsli  prefix_scan.hlsl
demo/shaders/: blit.hlsl  brdf.hlsli  color.hlsli  lerp_keyframes.hlsl  monguri_demo.hlsl  motion_vectors.hlsl  rtxmg_demo_path_tracer.hlsl  self_intersection_avoidance.hlsli  utils.hlsli  zrender.hlsl
docs/: QuickStart.md
rtxmg/: CMakeLists.txt
rtxmg/cluster_builder/: CMakeLists.txt  cluster_accel_builder.cpp  shaders.cfg
rtxmg/cluster_builder/shaders/: compute_cluster_tiling.hlsl  copy_cluster_offset.hlsl  fill_blas_from_clas_args.hlsl  fill_clusters.hlsl  fill_instance_descs.hlsl  fill_instantiate_template_args.hlsl
rtxmg/hiz/: CMakeLists.txt  hiz_buffer.cpp  shaders.cfg  zbuffer.cpp
rtxmg/hiz/shaders/: hiz_display.hlsl  hiz_pass1.hlsl  hiz_pass2.hlsl  zbuffer_display.hlsl  zbuffer_minmax.hlsl
rtxmg/include/rtxmg/cluster_builder/: cluster.h  cluster_accel_builder.h  cluster_accels.h  compute_cluster_tiling_params.h  copy_cluster_offset_params.h  displacement.hlsli  fill_blas_from_clas_args_params.h  fill_clusters_params.h  fill_instance_descs_params.h  fill_instantiate_template_args_params.h  tessellation_counters.h  tessellator_config.h  tessellator_constants.h  tilings.h
rtxmg/include/rtxmg/hiz/: hiz_buffer.h  hiz_buffer_constants.h  hiz_buffer_display_params.h  hiz_buffer_reduce_params.h  zbuffer.h
rtxmg/include/rtxmg/profiler/: gui.h  profiler.h  sampler.h  statistics.h  stopwatch.h
rtxmg/include/rtxmg/scene/: box_extent.h  camera.h  json.h  model.h  obj_importer.h  scene.h  string_utils.h
rtxmg/include/rtxmg/subdivision/: far.h  patch_param.h  segmented_vector.h  shape.h  subdivision_eval.hlsli  subdivision_plan_hlsl.h  subdivision_surface.h  topology_cache.h  topology_map.h  vertex.h
rtxmg/include/rtxmg/subdivision/osd_ports/tmr/: nodeDescriptor.h  subdivisionNode.h  surfaceDescriptor.h  treeDescriptor.h  types.h
rtxmg/include/rtxmg/utils/: box3.h  buffer.h  constants.h  debug.h  formatters.h  shader_debug.h  vectorlog.h
rtxmg/profiler/: CMakeLists.txt  gui.cpp  profiler.cpp  statistics.cpp  stopwatch.cpp
rtxmg/scene/: CMakeLists.txt  box_extent.cpp  camera.cpp  json.cpp  obj_importer.cpp  scene.cpp  string_utils.cpp
rtxmg/subdivision/: CMakeLists.txt  shape.cpp  subdivision_surface.cpp  topology_cache.cpp  topology_map.cpp
rtxmg/utils/: CMakeLists.txt  buffer.cpp  csvdump.cpp  debug.cpp  formatters.cpp
tools/: set_vs_vars.ps1
